sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:8: error: '(' expected but identifier found.
                         if amin<getValeur(pivot){
                            ^AlgSelectionSort:9: error: illegal start of simple expression
                          echange(a,pivot)}}
                                           ^