sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  val lgr=getNombreValeurs()
  for (pivot<-0 to lgr-2){var a=pivot
                          var amin=getValeur(a)
                          for(b<-pivot+1 to lgr-2){var blol=getValeur(b)
                                               if(blol<amin){a=b}}
                         if amin<getValeur(pivot){
                          echange(a,pivot)}}
}